# balanced-spiking-networks-pc

./: .gitignore  README.md  pyproject.toml
docs/: adding_analysis.md  experiments.md  explainer.md  mathematical_mapping.md
notebooks/: 01_figure3.ipynb  02_figure6.ipynb  03_sweeps.ipynb
outputs/figure3/20260213_084802/: summary.json
outputs/figure3/20260213_084802/baseline/: config.yaml  metrics.csv  summary.json  timeseries.npz
outputs/figure3/20260213_084802/perturbed/: config.yaml  metrics.csv  summary.json  timeseries.npz
outputs/figure6/20260213_084959/: summary.json
outputs/figure6/20260213_084959/differentiator/: config.yaml  metrics.csv  summary.json  timeseries.npz
outputs/figure6/20260213_084959/oscillator/: config.yaml  metrics.csv  summary.json  timeseries.npz
src/bsn_pc/: __init__.py  __main__.py  analysis.py  cli.py  inputs.py  kernels.py  model.py  simulator.py  sweeps.py  system.py  types.py
src/bsn_pc/experiments/: __init__.py  base.py  figure3.py  figure6.py
src/bsn_pc/plotting/: __init__.py  common.py  figure3.py  figure6.py
tests/: test_cli_smoke.py  test_model_math.py  test_notebooks_smoke.py  test_regression_metrics.py  test_simulation_behavior.py
tests/data/: regression_baseline.json
